# magic-spell-detector

./: README.md  pyproject.toml
magic_spell_detector/: spell_detector_settings.txt  start_detection.py  utils.py
magic_spell_detector/character_recognition/: spell_recognition.py  utils.py
magic_spell_detector/wand_tracer/: wand_tracer.py
